test/scc/decl/semantic-errors/029.a
029.t:3:5: error: negative width in bit-field 'a'